# stepyard

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: examples.md  index.md
docs/cli/: reference.md
docs/concepts/: control_flow.md  errors.md  execution-model.md  expressions.md  flows.md  index.md  triggers.md
docs/getting-started/: first-plugin.md  index.md  installation.md  tutorial.md
docs/how-to/: approvals.md  dry-run.md  index.md  plugin-management.md  scheduling.md  secrets.md  writing-plugins.md
docs/nodes/: builtin.md  index.md
docs/plugins/: architecture.md  creating.md  examples.md  faq.md  index.md  sdk.md  testing.md  triggers_hooks.md
examples/: README.md
examples/flows/: 01_hello.yaml  02_branching.yaml  03_loops.yaml  04_http_healthcheck.yaml  05_scheduled_backup.yaml  06_approval_gate.yaml  07_human_input.yaml  08_ai_release_notes.yaml  09_ai_code_review.yaml  10_ai_log_triage.yaml  11_event_driven_alert.yaml
examples/plugin/stepyard-example-plugin/: README.md  pyproject.toml
examples/plugin/stepyard-example-plugin/stepyard_example_plugin/: __init__.py  hooks.py  nodes.py  triggers.py
src/stepyard/: __init__.py  config.py  plugin.py
src/stepyard/api/: __init__.py  service.py
src/stepyard/cli/: __init__.py  __main__.py  app.py  completions.py  repl.py  theme.py  ui.py
src/stepyard/cli/commands/: __init__.py  doctor.py  dx.py  inspect.py  interactive.py  logs.py  manage.py  plugin.py  run.py  tools.py
src/stepyard/cli/renderers/: __init__.py  live_view.py
src/stepyard/cli/run/: __init__.py  inputs.py  panels.py  session.py
src/stepyard/core/: __init__.py  errors.py  expressions.py  flow.py  models.py  node_executor.py  ports.py  service.py
src/stepyard/engine/: __init__.py  evaluator.py  executor.py  navigation.py  recorder.py  runner.py  strategies.py
src/stepyard/executor/: __init__.py  process_manager.py  worker.py
src/stepyard/logging_/: __init__.py  log_store.py
src/stepyard/plugins/: __init__.py  execution.py  host.py  invoker.py  manager.py
src/stepyard/scheduler/: __init__.py  __main__.py  daemon.py  triggers.py
src/stepyard/sdk/: __init__.py  _stamps.py  hooks.py  inputs.py  node.py  testing.py  trigger.py
src/stepyard/storage/: __init__.py  database.py  facade.py  models.py
src/stepyard_builtin/: __init__.py  file.py  hooks.py  http.py  llm.py  shell.py  system.py  text.py  triggers.py
tests/integration/: test_cli.py
tests/unit/: test_builtins.py  test_cli_integration.py  test_env_block.py  test_flow.py  test_logs.py  test_node.py  test_plugin.py  test_regression.py  test_sdk_testing.py  test_service.py  test_storage.py
