[project]
name = "stepyard"
dynamic = ["version"]
description = "Ready-to-run automations with a Python escape hatch"
authors = [
    { name = "Ryszard Orlikowski" }
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["automation", "workflow", "yaml", "cli", "scheduler"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.1",
    "questionary>=2.0.1",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "apscheduler>=3.10.4",
    "psutil>=5.9.8",
    "prompt_toolkit>=3.0.43",
    "simpleeval>=1.0.0",
    "tenacity>=9.1.4",
    "sqlmodel>=0.0.38",
]

[project.urls]
Homepage = "https://github.com/rorlikowski/stepyard"
Repository = "https://github.com/rorlikowski/stepyard"
Documentation = "https://rorlikowski.github.io/stepyard/"
Issues = "https://github.com/rorlikowski/stepyard/issues"

[project.scripts]
stepyard = "stepyard.cli:cli"

[project.entry-points."stepyard.plugins"]
shell = "stepyard_builtin.shell"
http = "stepyard_builtin.http"
file = "stepyard_builtin.file"
text = "stepyard_builtin.text"
llm = "stepyard_builtin.llm"
system = "stepyard_builtin.system"

[project.entry-points."stepyard.triggers"]
builtin = "stepyard_builtin.triggers"

[project.entry-points."stepyard.hooks"]
builtin = "stepyard_builtin.hooks"

[project.entry-points."stepyard.input_collectors"]
builtin = "stepyard_builtin.system"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/stepyard/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/stepyard", "src/stepyard_builtin"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.12",
]

# ── Tooling ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/stepyard", "src/stepyard_builtin"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["src/stepyard/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = [
    "E501",   # line too long - handled by formatter
    "B008",   # do not perform function calls in default arguments
    "UP007",  # use X | Y for annotations - needs Python 3.10+
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]       # allow assert in tests
"src/stepyard/cli/*" = ["B006", "B007"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["stepyard.core.*", "stepyard.sdk.*", "stepyard.plugins.*"]
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "stepyard.cli.*",
    "stepyard.api.*",
    "stepyard.scheduler.*",
    "stepyard.storage.*",
    "stepyard.engine.*",
    "stepyard.logging_.*",
    "stepyard.executor.*",
    "stepyard_builtin.*",
]
ignore_errors = true
